--- a/roles/provision-fh-sync-server-apb/templates/secret.yml.j2
+++ b/roles/provision-fh-sync-server-apb/templates/secret.yml.j2
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ fhsync_secret_display_name }}
+  name: {{ fhsync_secret_name }}
   namespace: {{ namespace }}
 stringData:
-  name: {{ fhsync_secret_display_name }}
-  type: {{ fhsync_secret_display_name }}
+  name: {{ fhsync_secret_name }}
+  type: {{ fhsync_secret_name }}
   uri: https://{{ fhsync_route.stdout }}
 
