--- a/roles/provision-fh-sync-server-apb/templates/secret.yml.j2
+++ b/roles/provision-fh-sync-server-apb/templates/secret.yml.j2
@@ -3,6 +3,8 @@ kind: Secret
 metadata:
   name: {{ fhsync_secret_name }}
   namespace: {{ namespace }}
+  labels:
+    mobile: enabled
 stringData:
   name: {{ fhsync_secret_name }}
   type: {{ fhsync_secret_name }}
