--- a/roles/provision-fh-sync-server-apb/templates/deploy.yml.j2
+++ b/roles/provision-fh-sync-server-apb/templates/deploy.yml.j2
@@ -30,6 +30,8 @@ objects:
   kind: Service
   metadata:
     name: fh-sync-server
+    annotations:
+      mcp/prometheus: "enabled"
     labels:
       app: fh-sync-server
       template: fh-sync-server
@@ -121,7 +123,7 @@ objects:
               secretKeyRef:
                 key: database-password
                 name: mongodb
-          image: feedhenry/fh-sync-server:{{ fhsync_version }}
+          image: pbrookes/fh-sync-server:{{ fhsync_version }}
           imagePullPolicy: Always
           ports:
           - containerPort: 3000
