--- a/roles/provision-fh-sync-server-apb/templates/deploy.yml.j2
+++ b/roles/provision-fh-sync-server-apb/templates/deploy.yml.j2
@@ -31,7 +31,7 @@ objects:
   metadata:
     name: fh-sync-server
     annotations:
-      org.feedhenry.mcp/prometheus: "plain"
+      org.aerogear.metrics/plain_endpoint: "/metrics"
     labels:
       app: fh-sync-server
       template: fh-sync-server
