add serviceName label to secret

--- a/roles/provision-fh-sync-server-apb/templates/secret.yml.j2
+++ b/roles/provision-fh-sync-server-apb/templates/secret.yml.j2
@@ -5,6 +5,7 @@ metadata:
   namespace: {{ namespace }}
   labels:
     mobile: enabled
+    serviceName: fh-sync-server
 stringData:
   name: {{ fhsync_secret_name }}
   type: {{ fhsync_secret_name }}
